# sales_forecasting_inventory

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
app/: fastapi_app.py  streamlit_app.py
data/: forecast.csv  forecast_prophet.csv  inventory_kpi_category.csv  inventory_kpi_product.csv  inventory_kpi_region.csv
data_out/: forecast_prophet.csv  inventory_kpi_category.csv  inventory_kpi_product.csv  inventory_kpi_region.csv
docker/: Dockerfile  docker-compose.yml
notebooks/: 01_ingest_and_eda.ipynb  02_forecasting.ipynb  03_inventory_optimization.ipynb
sql/: init_db.py
src/: data_cleaning.py  db.py  forecasting.py  optimization.py  pipeline.py
