[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-forecasting-inventory"
version = "0.1.0"
description = "Retail sales forecasting and inventory optimization dashboard"
authors = [
    { name = "Antonio Borges", email = "borgesneto.ag_@Hotmail.com" }
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "scikit-learn",
    "prophet",
    "fastapi",
    "uvicorn",
    "streamlit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "app"]
